Correct callout spacing

--- a/style/rsc/notion-specific/callout.css
+++ b/style/rsc/notion-specific/callout.css
@@ -58,6 +58,10 @@
         max-width: 100% !important;
         width: 100% !important;
     }
+
+    .notion-callout {
+        padding: .2em .4em !important;
+    }
 }
 
 @media only screen and (max-width: 734px) {
